@@ -25,6 +25,7 @@ struct _Elm_Mapbuf_Smart_Data
    Eina_Bool             enabled : 1;
    Eina_Bool             smooth : 1;
    Eina_Bool             alpha : 1;
+   Eina_Bool             outside : 1;
 };
 
 /**
